fixed whitespace mobile

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -81,17 +81,6 @@ html,body {
   height: auto;
 }
 
-.disclaimerModal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1050;
-    display: none;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    outline: 0;
-}
 /* .diagonal {
   transform: skewY(2deg);
 }
@@ -115,11 +104,8 @@ html,body {
     margin: 0;
     width: 575px;
   }
-  .disclaimerModal {
-    width: 86%;
 }
 
-}
 /* mac smallest chrome window */
 @media (max-width:500px) {
   .navbar {
@@ -137,6 +123,14 @@ html,body {
   }
   .cart-height {
     height: 27rem;
+  }
+}
+
+/* mobile L */
+@media (max-width:425px) {
+  .navbar {
+    margin: 0;
+    width: 425px;
   }
 }
 /* iPhone 6/7/8 plus */
